use struct embedding to compose different handlers into ServerInterface assignable struct
